crates/plotnik-lib/tests/03-analyze/duplicates/duplicate_branch_label_reports_each_occurrence.txt
Q = [
  A: (a)
  A: (b)
  A: (c)
]
------------------ DIAGNOSTICS -------------------
error: branch label `A` is already used in this alternation
 --> query.ptk:3:3
  |
3 |   A: (b)
  |   ^
  |
help: each branch label must be unique within an alternation

error: branch label `A` is already used in this alternation
 --> query.ptk:4:3
  |
4 |   A: (c)
  |   ^
  |
help: each branch label must be unique within an alternation
-------------------- SYMBOLS ---------------------
Q
